src/test/deca/context/valid/created/class-extends-decl_field3.deca
//Description :
// Test de decl d'un objet de type incompatible
//
// Resultats :
// Erreur


class Premiere{
protected int x;

}

class Seconde extends Premiere{
protected float x;
}

{
}
