src/test/deca/context/invalid/created/class-extends-decl3.deca
//Description :
// Test de decl d'un objet de type incompatible
//
// Resultats :
// Erreur


class Premiere{

}

class Seconde extends Premiere{

}

{
float sec = new Premiere();
}
